puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Welcome/content/Mailers/Mailer.Welcome.cs.pp
using System.Net.Mail;
using $rootnamespace$.Models;

namespace $rootnamespace$.Mailers
{
    public partial class Mailer
    {
        public virtual MailMessage WelcomeMember(WelcomeMemberModel model)
        {
            var mailMessage = new MailMessage { Subject = "Welcome" };

            mailMessage.To.Add(model.EmailAddress);
			ViewBag.Data = model;
            PopulateBody(mailMessage, viewName: "WelcomeMember");

            return mailMessage;
        }
    }
}